--- a/index.html
+++ b/index.html
@@ -109,9 +109,7 @@
             </div>
             <div>
                 <label class="block mb-1 font-medium">Wybierz składniki aktywne (max 2):</label>
-                <!-- Container for dynamically added checkboxes. Original select is removed by JS. -->
                 <div id="active-ingredients-selector-placeholder"> 
-                    <!-- This select will be replaced by checkboxes in JS -->
                     <select id="active" class="w-full p-2 border rounded-lg hidden">
                         <option>Witamina C</option>
                         <option>Retinol</option>
@@ -119,7 +117,7 @@
                     </select>
                 </div>
             </div>
-            <div class="md:col-span-2"> <!-- Spans two columns for better layout -->
+            <div class="md:col-span-2">
                  <label for="product-type-ai" class="block mb-1 font-medium">Wybierz typ produktu:</label>
                  <select id="product-type-ai" class="w-full p-2 border rounded-lg">
                      <option value="Krem">Krem</option>
