--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <header class="bg-[#FDFBF7]/80 backdrop-blur-sm sticky top-0 z-40 border-b border-[#EAE5DD]">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <h1 class="text-xl font-bold text-[#6B5B4B]">Holistyczny Dobór</h1>
+            <h1 class="text-xl font-bold text-[#6B5B4B]">Holistyczny Dobór - Dary Natury</h1>
             <div class="hidden md:flex space-x-8">
                 <a href="#dlaczego-to-wazne" class="hover:text-[#A0522D] transition-colors">Dlaczego to ważne?</a>
                 <a href="#demo" class="hover:text-[#A0522D] transition-colors">Dobierz Kosmetyk</a>
